# isv-512a

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALLATION.md  README.md  can_be_deleted.txt  docker-entrypoint.sh  liveportrait_app.py  pyproject.toml  repair_silences.py
lipsync/: best_weight_file.ipynb  utils.py
lipsync/appearence_loss/: convnextv2.py  kp_loss.py  util.py
lipsync/create_ds/: ds.py  face_mask.py  filter_out_bbox.py  get_imp_landmarks.py  mediapipe_landmarks.py  video_utils.py
lipsync/dinet/: adat.py  attention.py  discriminator.py  ds.py  ds_adv.py  losses.py  lp_copy_mouth.py  model.py  model_adv.py  spade.py
lipsync/dinet_lp/: ds.py  ds_static.py  model.py
lipsync/dinet_lp_static/: ds.py  model.py
lipsync/face_emb/: infer.py  iresnet.py
lipsync/faceparse/: segformer.py
lipsync/hallo_audio/: audio_processor.py  processor.py  wav2vec2.py
lipsync/hdtr/: cropping.ipynb  ds.py  hdtr.py
lipsync/identity_loss/: iresnet.py  loss.py
lipsync/inference/: dinet_bins.py  infer.py  insightface_lms.py  mp_lms.py  preprocess.py  silero.py
lipsync/latentsync_ds/: affine_transform.py  image_processor.py
lipsync/silence_classifier/: ds.py  model.py  train.py
lipsync/syncnet/: ds.py  eval.py  infer.py  model.py
live_portrait/modules/image_restoration/real_esrgan/: model_downloader.py  real_esrgan_inferencer.py
live_portrait/modules/live_portrait/: live_portrait_inferencer.py  live_portrait_wrapper.py
live_portrait/modules/utils/: video_helper.py
live_portrait/notebooks/: advanced_live_portrait_webui.ipynb  files.ipynb
nbs/: dynamic_mask.ipynb  infer.ipynb  infer_512.ipynb  infer_adv_2.ipynb
scripts/: free_gpu_memory.py
scripts/dinet/: config.py  config_256_video.py  config_512.py  config_512_repeat.py  config_512_repeat_2_rt.py  config_512_v10.py  config_512_v11_repeat4.py  config_512_v8_repeat3.py  config_768.py  train.py  train_dv.py
scripts/dinet_adv/: config.py  config_512.py  eval.py  train.py
scripts/dinet_lp/: config_512.py  config_512_static.py  create_iv.py  train.py
scripts/dinet_lp_static/: config_512.py  train.py
scripts/live_portrait/: run.py
scripts/slurm/: submit_train.sh  train.slurm
scripts/syncnet/: bad_clips.txt  config.py  config2.py  convert.py  eval.py  train.py
